--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.uXperience.jarvis"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.uXperience.jarvis.DisplayActivity"
+                android:name="com.uXperience.jarvis.WeatherActivity"
                 android:label="Display"
                 android:screenOrientation="landscape"
                 android:launchMode="singleTask"/>
